syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.renamrgb.proto.lib";
option java_outer_classname = "UsersProto";

service UserService {
  rpc createUser(CreateUserRequest) returns (UserResponse) {};
  rpc updateUser(UpdateUserRequest) returns (UserResponse) {};
}

message CreateUserRequest {
  string name = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
}

message UserResponse {
  string id = 1;
  string name = 2;
}